// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`View Field Resolver - Failing Create Operation Should fail to create a conflicting view field on view and field metadata 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "viewField": [
        {
          "errors": [
            {
              "code": "INVALID_VIEW_DATA",
              "message": "View field with same fieldMetadataUniversalIdentifier and viewUniversalIdentifier already exists",
              "userFriendlyMessage": "View field already exists",
            },
          ],
          "flatEntityMinimalInformation": {
            "fieldMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
            "viewUniversalIdentifier": Any<String>,
          },
          "metadataName": "viewField",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 viewField",
    "summary": {
      "totalErrors": 1,
      "viewField": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating view fields",
  "name": "GraphQLError",
}
`;

exports[`View Field Resolver - Failing Create Operation should fail to create view field when non-existent field metadata 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "RELATION_UNIVERSAL_IDENTIFIER_NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Could not find fieldMetadata for given fieldMetadataId",
  "name": "NotFoundError",
}
`;

exports[`View Field Resolver - Failing Create Operation should fail to create view field when non-existent view metadata 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "RELATION_UNIVERSAL_IDENTIFIER_NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Could not find view for given viewId",
  "name": "NotFoundError",
}
`;
